src/objects/Workflow_Template_Case__c.object
<CustomObject>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Workflow Template Cases</relationshipLabel>
        <relationshipName>Workflow_Template_Cases</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entitlement</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>Workflow Template Cases</relationshipLabel>
        <relationshipName>Workflow_Template_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Escalation_Assignment__c</fullName>
        <globalPicklist>Member_Roles</globalPicklist>
        <label>Member Escalation Assignment</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestone_Type__c</fullName>
        <label>Milestone Type</label>
        <picklist>
            <picklistValues>
                <fullName>AEM Files Packaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEM Files to Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEM Job Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEM Layout Built</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counts Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Job Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Job Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM Drop Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM Job Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EA Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Drop Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Job Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Job Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Proof Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pod Submitted Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proforma Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Kickoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;R Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Campaign Project Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Project Kickoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Art Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Job Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Job Start</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workflow_Dependency__c</fullName>
        <label>Workflow Dependency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow_Template__c</fullName>
        <label>Workflow Template</label>
        <referenceTo>Workflow_Template__c</referenceTo>
        <relationshipLabel>Workflow Template Cases</relationshipLabel>
        <relationshipName>Workflow_Template_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Workflow Template Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Workflow_Template__c</columns>
        <columns>Case__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MPE_2_0_Cases</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Workflow_Template__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>MPE 2.0 Cases</label>
    </listViews>
    <listViews>
        <fullName>Standard_New</fullName>
        <columns>NAME</columns>
        <columns>Case_Subject__c</columns>
        <columns>Order__c</columns>
        <columns>Workflow_Dependency__c</columns>
        <columns>Member_Escalation_Assignment__c</columns>
        <columns>Entitlement__c</columns>
        <columns>Milestone_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Workflow_Template__c</field>
            <operation>equals</operation>
            <value>Standard (New)</value>
        </filters>
        <label>Standard (New)</label>
    </listViews>
    <listViews>
        <fullName>Studio_Standalone_T1</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Workflow_Template__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Workflow_Template__c</field>
            <operation>equals</operation>
            <value>Studio Standalone T1</value>
        </filters>
        <label>Studio Standalone T1</label>
    </listViews>
    <nameField>
        <displayFormat>WTC-{0000}</displayFormat>
        <label>Workflow Template Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow Template Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>